# bullpen-old

./: .gitignore  .replit  Cargo.toml  LICENSE  flake.nix  pyproject.toml  replit.nix  scratch.txt
src/: chat_model.rs  client.rs  completion_model.rs  config.rs  embedding_model.rs  error.rs  l402_client.rs  lib.rs  main.rs  model.rs  replit_client.rs  structs.rs  token_manager.rs
src/http/: base_client.rs  l402_client.rs  mod.rs  replit_client.rs
src/lightning/: alby.rs  lnbits.rs  mod.rs  model.rs  strike.rs  utils.rs
src/models/: mod.rs
src/models/base/: mod.rs  model.rs  structs.rs
src/models/chat/: chat_model.rs  mod.rs  structs.rs
src/models/chat/impls/: mod.rs  openai_chat_model.rs  perplexity_chat_model.rs  replit_chat_model.rs
src/models/completion/: completion_model.rs  mod.rs  structs.rs
src/models/completion/impls/: mod.rs  openai_completion_model.rs  replit_completion_model.rs
src/models/embedding/: embedding_model.rs  mod.rs  structs.rs
src/models/embedding/impls/: mod.rs  replit_embedding_model.rs
