[package]
name = "bullpen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bullpen"
path = "src/lib.rs"

[dependencies]
bytes = "1.5.0"
futures-util = "0.3.28"
hyper = "0.14.27"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
